# meta-cpp

./: CMakeLists.txt  LICENSE  makefile  readme.org
brainfuck/: interpreter.hpp  main.cpp  memory.hpp
common/: conditional.hpp  lambda.hpp  list.hpp  macros.hpp  numeric.hpp  printer.hpp  range.hpp  string.hpp
game-of-life/: gol.hpp  main.cpp  printer.hpp
turing-machine/: machine.hpp  main.cpp  tape.hpp
